--- a/app/src/main/res/layout/activity_confirmar_datos.xml
+++ b/app/src/main/res/layout/activity_confirmar_datos.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/correoComp"
         android:layout_width="275dp"
-        android:layout_height="40dp"
+        android:layout_height="65dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="sans-serif"
@@ -21,12 +21,12 @@
         app:layout_constraintHorizontal_bias="0.531"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.393" />
+        app:layout_constraintVertical_bias="0.417" />
 
     <TextView
         android:id="@+id/nombreComp"
         android:layout_width="275dp"
-        android:layout_height="40dp"
+        android:layout_height="65dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="sans-serif"
@@ -38,12 +38,12 @@
         app:layout_constraintHorizontal_bias="0.531"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.297" />
+        app:layout_constraintVertical_bias="0.288" />
 
     <TextView
         android:id="@+id/passwordComp"
         android:layout_width="275dp"
-        android:layout_height="40dp"
+        android:layout_height="65dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="sans-serif"
@@ -55,7 +55,7 @@
         app:layout_constraintHorizontal_bias="0.531"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.486" />
+        app:layout_constraintVertical_bias="0.544" />
 
     <Button
         android:id="@+id/confirmarYRegistrar"
@@ -98,7 +98,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="sans-serif"
-        android:text="TextView"
+        android:text="¿Son estos datos correctos?"
         android:textAlignment="center"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -106,7 +106,6 @@
         app:layout_constraintHorizontal_bias="0.531"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.118"
-        tools:text="¿Son estos datos correctos?" />
+        app:layout_constraintVertical_bias="0.118" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
