--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -138,6 +138,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
+        android:checked="false"
         android:text="Acepto terminos y condiciones"
         android:textColor="#777777"
         android:textSize="18sp"
